# python-template

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
.github/workflows/: test.yml
hooks/: post_gen_project.sh  pre_gen_project.py
tests/: contexts.json  test_template.py
{{cookiecutter.project_slug}}/: .envrc  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug.md  question.md
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  test.yml
{{cookiecutter.project_slug}}/docs/: contributing.md  gen_api_docs.py  index.md
{{cookiecutter.project_slug}}/docs/api/: index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  version.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
