[project]
name = "cookiecutter-haztecaso-python"
version = "0.3.0"
description = "My personal cookiecutter template for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "cookiecutter" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "commitizen>=3.13.0",
    "isort>=6.0.1",
    "pre-commit>=3.6.0",
    "pytest-cookies",
]

[tool.hatch.build.targets.sdist]
include = [
    "/cookiecutter.json",
    "/{{cookiecutter.project_slug}}",
    "/hooks",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
include = [
    "/cookiecutter.json",
    "/{{cookiecutter.project_slug}}",
    "/hooks",
]


[tool.pytest.ini_options]
testpaths = [ "tests" ]
norecursedirs = [ "{{cookiecutter.project_slug}}" ]

[tool.commitizen]
version_provider = "uv"
tag_format = "v${version}"
version_scheme = "semver"
update_changelog_on_bump = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
