[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
{%- if cookiecutter.command_line_interface.lower() == "click" %}
  "click",
{%- endif %}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
{%- if cookiecutter.command_line_interface.lower() in ["click", "typer"] %}

[project.scripts]
{{ cookiecutter.project_slug }}= "{{cookiecutter.project_slug}}.__main__:main"
{%- endif %}

[dependency-groups]
dev = [
    "black",
    "commitizen",
    "flake8",
    "isort",
    "pre-commit",
    "pyright",
    "pytest",
{%- if cookiecutter.use_asyncio.lower() == "y" %}
    "pytest-asyncio",
{%- endif %}
    "pytest-cov",
]
{%- if cookiecutter.use_asyncio.lower() == "y" %}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
{%- endif %}

[tool.commitizen]
version_provider = "uv"
tag_format =  "v${version}"
version_scheme = "semver"
update_changelog_on_bump = true
