[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
{%- if cookiecutter.command_line_interface.lower() == "click" %}
    "click",
{%- endif %}
{%- if cookiecutter.use_asyncio.lower() == "y" %}
    "asyncio",
{%- endif %}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
{{ cookiecutter.project_slug }}= "{{cookiecutter.project_slug}}.__main__:main"

[dependency-groups]
dev = [
    "black",
    "commitizen",
    "flake8",
    "isort",
    "pre-commit",
    "pyright",
    "pytest",
{%- if cookiecutter.use_asyncio.lower() == "y" %}
    "pytest-asyncio",
{%- endif %}
    "pytest-cov",
]
{%- if cookiecutter.use_mkdocs == "y" %}
docs = [
    "markdown-include",
    "mkdocs",
    "mkdocs-autolinks-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-htmlproofer-plugin",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-section-index",
    "mkdocstrings",
    "mkdocstrings-python",
]
{%- endif %}
{%- if cookiecutter.use_asyncio.lower() == "y" %}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "-ra --cov=src"
{%- endif %}

[tool.coverage.report]
exclude_also = [
    'pragma: no cover',
    'def __repr__',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
omit = [
    "*/.local/*",
    "/usr/*",
    "/nix/store/*",
    ]

[tool.commitizen]
version_provider = "uv"
tag_format =  "v${version}"
version_scheme = "semver"
update_changelog_on_bump = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
